workshop03/myapp1-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: myapp1-svc
    labels:
        name: myapp-svc
spec:
    type: ClusterIP
    selector:
        name: myapp-pod
        version: v1
    ports:
        - name: http
          port: 80
          targetPort: nw-app-http
